2011-01-28  Dimitri Glazkov  <dglazkov@chromium.org>

        Skip webkitAudioPannerNode from the test. It's not yet implemented across
        all ports/platforms.

        * fast/dom/script-tests/prototype-inheritance.js: Skipped webkitAudioPannerNode.

2011-01-28  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] Added expectations for a passing test.

        * platform/chromium-mac/fast/dom/isindex-002-expected.checksum: Added.
        * platform/chromium-mac/fast/dom/isindex-002-expected.png: Added.
        * platform/chromium-mac/fast/dom/isindex-002-expected.txt: Removed.
        * platform/chromium/test_expectations.txt:

2011-01-28  Dimitri Glazkov  <dglazkov@chromium.org>

        Updated Chromium baselines for a bug that was fixed.
        https://bugs.webkit.org/show_bug.cgi?id=45527

        * platform/chromium-linux/fast/dom/replaceChild-expected.checksum:
        * platform/chromium-linux/fast/dom/replaceChild-expected.png:
        * platform/chromium-mac/fast/dom/replaceChild-expected.checksum: Added.
        * platform/chromium-mac/fast/dom/replaceChild-expected.png: Added.
        * platform/chromium-win/fast/dom/replaceChild-expected.checksum:
        * platform/chromium-win/fast/dom/replaceChild-expected.png:
        * platform/chromium/test_expectations.txt: Removed expectation of failure.

2011-01-28  Jessie Berlin  <jberlin@apple.com>

        [Windows 7 Release Tests] fast/repaint/select-option-background-color.html failing since introduction in r76826
        https://bugs.webkit.org/show_bug.cgi?id=53327

        Unreviewed, adding Windows-specific results to get the Windows 7 Release Test bot green.

        * platform/win/fast/repaint/select-option-background-color-expected.txt: Added.

2011-01-28  Ryosuke Niwa  <rniwa@webkit.org>

        Unreviewed Chromium rebaselines.

        Check in the same result as fast/dom/window-domurl-crash-expected.txt because Windows port