@@ -1,0 +1,4 @@
+}
+NULL pointer crash in TextIterator::handleTextBox() when using RTL text. If there is no crash, then the test passes.
+
+If you can see this, then the test passes.
