@@ -1,0 +1,11 @@
+}
+<style>
+ *:nth-child(2):first-letter {float: left;direction: rtl;
+</style>
+<p>NULL pointer crash in TextIterator::handleTextBox() when using RTL text.
+If there is no crash, then the test passes.</p>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+</script>
+<p>If you can see this, then the test passes.</p>
