@@ -1,3 +1,13 @@
+2011-01-28  Tom Sepez  <tsepez@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        NULL pointer crash in TextIterator::handleTextBox()
+        https://bugs.webkit.org/show_bug.cgi?id=53267
+
+        * fast/css/rtl-nth-child-first-letter-crash-expected.txt: Added.
+        * fast/css/rtl-nth-child-first-letter-crash.html: Added.
+
 2011-01-28  Dimitri Glazkov  <dglazkov@chromium.org>
 
         Skip webkitAudioPannerNode from the test. It's not yet implemented across
